// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-8 w-8 avatar"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-12 w-12 avatar"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
</div>
`;

exports[`Avatar > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
    variant="default"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
    variant="destructive"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
    variant="outline"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
  <span
    class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
    variant="secondary"
  >
    <span
      class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
    >
      U
    </span>
  </span>
</div>
`;

exports[`Avatar > Snapshots > matches default snapshot 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
>
  <span
    class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
  >
    U
  </span>
</span>
`;

exports[`Avatar > Snapshots > matches disabled state snapshot 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar"
  disabled=""
>
  <span
    class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
  >
    U
  </span>
</span>
`;

exports[`Avatar > Snapshots > matches loading state snapshot 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 avatar avatar--loading"
>
  <span
    class="flex h-full w-full items-center justify-center rounded-full bg-muted text-muted-foreground font-medium"
  >
    U
  </span>
</span>
`;
